#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(DRMAA compatibility test suite, 1.0.0, peter.troeger@hpi.uni-potsdam.de)
AC_CONFIG_HEADER(config.h)

# Checks for programs.
AC_PROG_CC

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([unistd.h errno.h signal.h pthread.h])
AC_CHECK_HEADER(drmaa.h, , [AC_MSG_ERROR(
[Couldn't find drmaa.h... If it resists at an unusual place, please configure the include path with the environment variable CPPFLAGS (e.g. export CPPFLAGS=-I/tmp/) before running the configure script.])])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL

# allow to add debug options
AC_DEFINE([DEBUG], [], [debug build, additional debug output on stderr])

# search for DRMAA library
AC_CHECK_LIB(pthread, pthread_create)
AC_CHECK_LIB(drmaa, drmaa_init, ,[AC_MSG_ERROR(
[Couldn't find DRMAA library... If it resists at an unusual place, please configure the library path with the environment variable LDFLAGS (e.g. export LDFLAGS=-L/tmp/) before running the configure script.])])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
